@@ -17,7 +17,6 @@
 package org.gradle.performance.fixture
 
 import com.google.common.base.Splitter
-import org.gradle.api.JavaVersion
 import org.gradle.integtests.fixtures.executer.ExecuterDecoratingGradleDistribution
 import org.gradle.integtests.fixtures.executer.GradleDistribution
 import org.gradle.integtests.fixtures.executer.GradleExecuterDecorator
@@ -25,6 +24,8 @@ import org.gradle.integtests.fixtures.executer.IntegrationTestBuildContext
 import org.gradle.integtests.fixtures.versions.ReleasedVersionDistributions
 import org.gradle.internal.jvm.Jvm
 import org.gradle.internal.os.OperatingSystem
+import org.gradle.internal.time.TimeProvider
+import org.gradle.internal.time.TrueTimeProvider
 import org.gradle.performance.measure.MeasuredOperation
 import org.gradle.performance.results.CrossVersionPerformanceResults
 import org.gradle.performance.results.DataReporter
@@ -41,11 +42,12 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
     private static final Pattern COMMA_OR_SEMICOLON = Pattern.compile('[;,]')
 
     GradleDistribution current
-    final IntegrationTestBuildContext buildContext = new IntegrationTestBuildContext()
+    final IntegrationTestBuildContext buildContext
     final DataReporter<CrossVersionPerformanceResults> reporter
     TestProjectLocator testProjectLocator = new TestProjectLocator()
     final BuildExperimentRunner experimentRunner
     final ReleasedVersionDistributions releases
+    final TimeProvider timeProvider = new TrueTimeProvider()
 
     String testProject
     File workingDir
@@ -53,9 +55,8 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
 
     List<String> tasksToRun = []
     List<String> args = []
-    List<String> gradleOpts = ['-Xms2g', '-Xmx2g']
+    List<String> gradleOpts = []
     List<String> previousTestIds = []
-    int maxPermSizeMB = 256
 
     List<String> targetVersions = []
 
@@ -63,10 +64,11 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
     InvocationCustomizer invocationCustomizer
     GradleExecuterDecorator executerDecorator
 
-    CrossVersionPerformanceTestRunner(BuildExperimentRunner experimentRunner, DataReporter<CrossVersionPerformanceResults> reporter, ReleasedVersionDistributions releases) {
+    CrossVersionPerformanceTestRunner(BuildExperimentRunner experimentRunner, DataReporter<CrossVersionPerformanceResults> reporter, ReleasedVersionDistributions releases, IntegrationTestBuildContext buildContext) {
         this.reporter = reporter
         this.experimentRunner = experimentRunner
         this.releases = releases
+        this.buildContext = buildContext
     }
 
     CrossVersionPerformanceResults run(Flakiness flakiness = Flakiness.not_flaky) {
@@ -92,14 +94,14 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
             testProject: testProject,
             tasks: tasksToRun.collect { it.toString() },
             args: args.collect { it.toString() },
-            gradleOpts: resolveGradleOpts().collect { it.toString() },
+                gradleOpts: resolveGradleOpts(),
             daemon: useDaemon,
             jvm: Jvm.current().toString(),
             operatingSystem: OperatingSystem.current().toString(),
             versionUnderTest: GradleVersion.current().getVersion(),
             vcsBranch: Git.current().branchName,
             vcsCommits: [Git.current().commitId],
-            startTime: System.currentTimeMillis(),
+            startTime: timeProvider.getCurrentTime(),
             channel: ResultsStoreHelper.determineChannel()
         )
 
@@ -112,7 +114,7 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
             runVersion(buildContext.distribution(baselineVersion.version), perVersionWorkingDirectory(baselineVersion.version), baselineVersion.results)
         }
 
-        results.endTime = System.currentTimeMillis()
+        results.endTime = timeProvider.getCurrentTime()
 
         results.assertEveryBuildSucceeds()
 
@@ -173,11 +175,13 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
                 throw new IllegalArgumentException("'defaults' shouldn't be used in target versions.")
             }
             def releasedVersion = findRelease(releases, version)
+            def versionObject = GradleVersion.version(version)
             if (releasedVersion) {
                 baselineVersions.add(releasedVersion.version.version)
-            } else if (GradleVersion.version(version).snapshot) {
+            } else if (versionObject.snapshot || isRcVersion(versionObject)) {
                 // for snapshots, we don't have a cheap way to check if it really exists, so we'll just
                 // blindly add it to the list and trust the test author
+                // Only active rc versions are listed in all-released-versions.properties that ReleasedVersionDistributions uses
                 addMostRecentFinalRelease = false
                 baselineVersions.add(version)
             } else {
@@ -191,6 +195,11 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
         }
 
         baselineVersions
+    }
+
+    private static boolean isRcVersion(GradleVersion versionObject) {
+        // there is no public API for checking for RC version, this is an internal way
+        versionObject.stage.stage == 3
     }
 
     private static Iterable<String> resolveOverriddenVersions(String overrideBaselinesProperty, List<String> targetVersions) {
@@ -240,11 +249,7 @@ public class CrossVersionPerformanceTestRunner extends PerformanceTestSpec {
     }
 
     def resolveGradleOpts() {
-        def gradleOptsInUse = [] + this.gradleOpts
-        if (!JavaVersion.current().isJava8Compatible() && gradleOptsInUse.count { it.startsWith('-XX:MaxPermSize=') } == 0) {
-            gradleOptsInUse << "-XX:MaxPermSize=${maxPermSizeMB}m".toString()
-        }
-        gradleOptsInUse
+        PerformanceTestJvmOptions.customizeJvmOptions(this.gradleOpts)
     }
 
     HonestProfilerCollector getHonestProfiler() {
